# mx25519

./: CMakeLists.txt  README.md
include/: mx25519.h
src/: cpu.c  cpu.h  digit.h  digit_ops.h  impl.c  impl.h  mp_ops.h  mx25519.c  platform.c  platform.h  scalar.c  scalar.h
src/amd64/: constants.inc  scalarmult.h  scalarmult_compat.inc  scalarmult_gnu.S  scalarmult_masm.asm  scalarmult_mulx_adx.inc
src/arm64/: scalarmult.S  scalarmult.h  scalarmult.s
src/portable/: fe.h  scalarmult.c  scalarmult.h
tests/: bench.c  tests.c
